<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:backgroundTint="@color/green"
        android:padding="@dimen/padding"
        android:text="@string/c"
        android:textSize="@dimen/size_Content" />

    <Button
        android:id="@+id/btnL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:backgroundTint="@color/green"
        android:padding="@dimen/padding"
        android:text="@string/l"
        android:textSize="@dimen/size_Content" />

    <Button
        android:id="@+id/btnR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:backgroundTint="@color/green"
        android:padding="@dimen/padding"
        android:text="@string/r"
        android:textSize="@dimen/size_Content" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:backgroundTint="@color/green"
        android:padding="@dimen/padding"
        android:text="@string/g"
        android:textSize="@dimen/size_Content" />

</LinearLayout>