<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/title"
            android:textColor="@color/black"
            android:layout_weight="9.5"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:gravity="right"
            android:text="X"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/note" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="5"
            android:background="@drawable/vien"
            android:hint="@string/lastname"
            android:padding="@dimen/padding" />

        <EditText
            android:id="@+id/ed_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="5"
            android:background="@drawable/vien"
            android:hint="@string/firstname"
            android:padding="@dimen/padding" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:background="@drawable/vien"
        android:hint="@string/tel"
        android:padding="@dimen/padding" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/vien"
        android:hint="@string/password"
        android:padding="@dimen/padding" />

    <Button
        android:id="@+id/btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/title" />

</LinearLayout>