<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".ConstraintDkActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/size_Title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="X"
        android:textColor="@color/black"
        android:textSize="@dimen/size_Title"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/note"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/ed_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:background="@drawable/vien"
        android:hint="@string/lastname"
        android:padding="@dimen/padding"
        app:layout_constraintLeft_toLeftOf="@id/note"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/note" />

    <EditText
        android:id="@+id/ed_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/vien"
        android:hint="@string/firstname"
        android:padding="@dimen/padding"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note" />

    <EditText
        android:id="@+id/ed_tel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:background="@drawable/vien"
        android:hint="@string/tel"
        android:padding="@dimen/padding"
        app:layout_constraintLeft_toLeftOf="@id/note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_lastname" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:background="@drawable/vien"
        android:hint="@string/password"
        android:padding="@dimen/padding"
        app:layout_constraintLeft_toLeftOf="@id/note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_tel" />

    <Button
        android:id="@+id/btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_pass" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>